# Desktop-Control-MCP

./: .gitignore  README.md  pyproject.toml
src/desktop_control/: __init__.py  cdp.py  element_detection.py  keyboard.py  mouse.py  screen.py  server.py  ui_automation.py  windows.py
